add tooltip to piechart

--- a/piechart/piechartviewer.css
+++ b/piechart/piechartviewer.css
@@ -51,7 +51,7 @@ text.active {
 	background-color: white;
 	display: table;
 	width: 50%;
-    margin: 0 auto;
+  margin: 0 auto;
 }
 
 #noDatasetsMessageSpan {
@@ -71,4 +71,21 @@ text{
   top: 0;
   z-index: 100;
   position: fixed;
+}
+
+.onHover {
+  border:1px;
+  opacity: 0.5;
+}
+
+.pietooltip {
+  background: #eee;
+  box-shadow: 0 0 5px #999999;
+  color: #333;
+  display: none;
+  font-size: 20px;
+  padding: 10px;
+  position: absolute;
+  text-align: center;
+  z-index: 10;
 }
