--- a/googleMapOnPredix/public/stylesheets/style.css
+++ b/googleMapOnPredix/public/stylesheets/style.css
@@ -5,6 +5,14 @@ body {
   height: 100vh;
   display: flex;
   flex-direction: column;
+
+}
+
+.map {
+  width: 800;
+  height: 800px;
+  margin-top: -350px;
+  display:inline-block
 }
 
 a {
@@ -29,16 +37,20 @@ td {
 
 .header {
   color: #ffffff;
-  background-image: url('/images/banner-dark.png');
+/*   background-image: url('/images/banner-dark.png'); */
+
   background-repeat: no-repeat;
   background-size: cover;
   padding: 20px;
   width: 100%;
+  margin-top: 10%;
 }
 
 .container {
+  margin-top: 10%;
   padding: 0 20px;
   min-height: 200px;
+  text-align: center;
 }
 
 .footer {
@@ -98,4 +110,23 @@ li {
 .windyservice_chart_canvas{
   height:500px;
   width:400px;
+}
+
+.hidden{
+   visibility: hidden;
+}
+
+.loader {
+    border: 16px solid #f3f3f3; /* Light grey */
+    border-top: 16px solid #3498db; /* Blue */
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    animation: spin 2s linear infinite;
+    margin-top: 200px;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
 }
