--- a/googleMapOnPredix/public/stylesheets/piechartviewer.css
+++ b/googleMapOnPredix/public/stylesheets/piechartviewer.css
@@ -77,22 +77,23 @@ text.active {
   color: #333;
   display: none;
   font-size: 20px;
-  padding: 10px;
   position: absolute;
   text-align: center;
   z-index: 10;
 }
 
 #pieChartContainer {
-    display:inline-block;
-    float: right;
     background-color: white;
-    border: 1px solid #cccccc;
     font-family: "Helvetica Neue", Helvetica, sans-serif;
     height: auto;
-    overflow: auto;
     text-align: center;
     width: auto;
     position: relative;
-    margin-top: :-400px;
+}
+
+.legend {
+  font-size: 12px;
+}
+rect {
+  stroke-width: 2;
 }
