--- a/googleMapOnPredix/public/stylesheets/style.css
+++ b/googleMapOnPredix/public/stylesheets/style.css
@@ -1,41 +1,66 @@
 body {
-  /*padding: 50px;*/
+  padding: 0;
   font: 14px Roboto,'Helvetica Neue',Helvetica,Arial,sans-serif;
   margin: 0;
   height: 100vh;
   display: flex;
   flex-direction: column;
-
 }
 
-.map {
-  width: 800;
-  height: 800px;
-  margin-top: -350px;
-  display:inline-block
+.index-body { 
+  background: url("../images/bg.jpg") no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
-a {
-  color: #00B7FF;
-}
-
-h2 {
-  font-weight: 300;
-  font-size: 40px;
-  margin: 15px 0;
+h1 {
+  display: block;
+  font-weight: 600;
+    font-size: 42px;
+    margin-bottom: 18px;
+    text-shadow: 0 0 50px rgba(0,0,0,.4);
+    text-align: center;
 }
 
 h4 {
-  font-weight: normal;
-  font-size: 16px;
+  text-align: center;
 }
 
-td {
-  vertical-align: top;
-  padding-right: 20px;
+.login_btn{
+  background-color: transparent;
+  border-radius: 3px;
+  border-color: white;
+  border-image-width: 1px;
+  min-width: 120px;
+  text-align: center;
+  height: 40px;
+    line-height: 40px;
+    color: white;
+
+  box-sizing: border-box;
+    display: inline-block;
+    padding: 0 20px;
+    vertical-align: top;
+    font-family: Proxima Nova,helvetica neue,helvetica,arial,sans-serif !important;
+    font-weight: 600;
+    font-size: 16px !important;
+    text-align: center;
+    text-decoration: none;
+    transition: all .15s ease-in-out;
+    border-radius: 3px;
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px;
+    border-bottom-right-radius: 3px;
+    border-bottom-left-radius: 3px;
+    border: none;
+    cursor: pointer;
+    box-shadow: inset 0 0 0 2px #fff;
 }
 
-.header {
+
+.header_ {
   color: #ffffff;
 /*   background-image: url('/images/banner-dark.png'); */
 
@@ -46,74 +71,27 @@ td {
   margin-top: 10%;
 }
 
-.container {
+.container_ {
   margin-top: 10%;
   padding: 0 20px;
   min-height: 200px;
   text-align: center;
 }
 
-.footer {
+.footer_ {
   width: 100%;
   position: fixed;
   bottom: 0;
   z-index: -99;
 }
 
-.footer-logo-container {
+.footer-logo-container_ {
   position: relative;
 }
 
-.footer-logo {
-  height: 30px;
+.footer-logo_ {
   padding: 20px;
   float: right;
-}
-
-li {
-  list-style: none;
-  padding-bottom: 10px;
-}
-
-.tag-multiple{
-  font-size:15px;
-  text-indent:-1.5px;
-  padding-left:2.5px;
-  height: 100%;
-  min-height: 200px;
-}
-
-.timeseries_button {
-    background-color: #4CAF50; /* Green */
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    border-radius: 8px;
-    cursor:pointer;
-    margin-top: 20px;
-}
-
-.start-time{
-  font-size:15px;
-  text-indent:-1.5px;
-  padding-left:2.5px;
-}
-
-.windyservice_chart_div{
-  display: inline-block;
-}
-
-.windyservice_chart_canvas{
-  height:500px;
-  width:400px;
-}
-
-.hidden{
-   visibility: hidden;
 }
 
 .loader {
@@ -121,9 +99,70 @@ li {
     border-top: 16px solid #3498db; /* Blue */
     border-radius: 50%;
     width: 120px;
-    height: 120px;
+    height: 60px;
     animation: spin 2s linear infinite;
     margin-top: 200px;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+
+#map
+{
+    width: 100px;
+    height: 480px;
+    min-height: 100%;
+    min-width: 100%;
+    display: block;
+}
+
+
+.fill
+{
+    min-height: 100%;
+    height: 100%;
+    width: 90%;
+    min-width: 90%;
+}
+
+.container_2 {
+    margin-top: 200px;
+
+}
+
+.nopadding {
+  padding: 0;
+  margin: 0;
+}
+
+
+
+.myhidden{
+   visibility: hidden;
+   height:0;
+}
+
+
+
+#map
+{
+    width: 100px;
+    height: 480px;
+    min-height: 100%;
+    min-width: 100%;
+    display: inline-block;
+}
+
+
+.loader {
+    border: 16px solid #f3f3f3; /* Light grey */
+    border-top: 16px solid #3498db; /* Blue */
+    border-radius: 50%;
+    width: 120px;
+    height: 60px;
+    animation: spin 2s linear infinite;
 }
 
 @keyframes spin {
