--- a/googleMapOnPredix/public/stylesheets/style.css
+++ b/googleMapOnPredix/public/stylesheets/style.css
@@ -172,7 +172,7 @@ h4 {
 
 .mybackgroundHeader{
   background-image: url('../images/bgHeader.png');
-  background-position: center center;
+  background-size: 100% 100%;
   background-repeat: no-repeat;
   margin-top: 50px;
   height: 400px;
