--- a/googleMapOnPredix/public/stylesheets/stl.css
+++ b/googleMapOnPredix/public/stylesheets/stl.css
@@ -83,6 +83,8 @@ h4 {
   position: fixed;
   bottom: 0;
   z-index: -99;
+	text-align: center;
+	color:white;
 }
 
 .footer-logo-container_ {
@@ -92,6 +94,13 @@ h4 {
 .footer-logo_ {
   padding: 20px;
   float: right;
+}
+
+.footer_2 {
+  width: 100%;
+  
+  bottom: 0;
+  z-index: -99;
 }
 
 .loader {
@@ -123,13 +132,17 @@ h4 {
 {
     min-height: 100%;
     height: 100%;
-    width: 90%;
-    min-width: 90%;
+    width: 100%;
+    min-width: 100%;
 }
 
 .container_2 {
   	margin-top: 50px;
 	
+}
+
+.container_3 {
+  	margin-top: 0px;
 }
 
 .nopadding {
