--- a/googleMapOnPredix/public/stylesheets/tabviewer.css
+++ b/googleMapOnPredix/public/stylesheets/tabviewer.css
@@ -51,50 +51,24 @@ text.active {
 	background-color: white;
 	display: table;
 	width: 50%;
-  margin: 0 auto;
+    margin: 0 auto;
 }
 
 #noDatasetsMessageSpan {
 	display: table-cell;
 	vertical-align: middle;
 }
-
+text{
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
 
 .header-fixed-top {
   top: 0;
   z-index: 100;
   position: fixed;
-}
-
-.onHover_pieChart {
-  border:1px;
-  opacity: 0.5;
-}
-
-.pietooltip {
-  background: #eee;
-  box-shadow: 0 0 5px #999999;
-  color: #333;
-  display: none;
-  font-size: 20px;
-  position: absolute;
-  text-align: center;
-  z-index: 10;
-}
-
-#pieChartContainer {
-
-    font-family: "Helvetica Neue", Helvetica, sans-serif;
-    text-align: center;
-    position: relative;
-    width:100%;
-    height:100%;
-	display: block;
-}
-
-.legend {
-  font-size: 12px;
-}
-rect {
-  stroke-width: 2;
 }
