auto resize for charts

--- a/googleMapOnPredix/public/stylesheets/lineChart.css
+++ b/googleMapOnPredix/public/stylesheets/lineChart.css
@@ -21,3 +21,13 @@
   stroke: black;
   stroke-width: 2px;
 }
+
+.area {
+    fill: lightsteelblue;
+    stroke-width: 0;
+}
+
+#lineChartContainer {
+	width:100%;
+	height:100%;
+}
