--- a/googleMapOnPredix/public/stylesheets/piechartviewer.css
+++ b/googleMapOnPredix/public/stylesheets/piechartviewer.css
@@ -85,10 +85,10 @@ text.active {
 #pieChartContainer {
     background-color: white;
     font-family: "Helvetica Neue", Helvetica, sans-serif;
-    height: auto;
     text-align: center;
-    width: auto;
     position: relative;
+    width:100%;
+    height:100%;
 }
 
 .legend {
