improve line chart&clean googleMap.js

--- a/googleMapOnPredix/public/stylesheets/lineChart.css
+++ b/googleMapOnPredix/public/stylesheets/lineChart.css
@@ -35,3 +35,11 @@
 .title_lineChart {
   text-align: center;
 }
+
+.grid .tick {
+    stroke: lightgrey;
+    opacity: 0.7;
+}
+.grid path {
+      stroke-width: 0;
+}
