--- a/googleMapOnPredix/public/stylesheets/piechartviewer.css
+++ b/googleMapOnPredix/public/stylesheets/piechartviewer.css
@@ -88,12 +88,13 @@ text.active {
     text-align: center;
     position: relative;
     width:100%;
-    height:100%;
+    height:480px;
 }
 
 .legend {
   font-size: 12px;
 }
+
 rect {
   stroke-width: 2;
 }
