--- a/googleMapOnPredix/public/stylesheets/stl.css
+++ b/googleMapOnPredix/public/stylesheets/stl.css
@@ -109,14 +109,6 @@ h4 {
     100% { transform: rotate(360deg); }
 }
 
-#map
-{
-    width: 100px;
-    height: 480px;
-    min-height: 100%;
-    min-width: 100%;
-    display: block;
-}
 
 
 .fill
@@ -148,7 +140,7 @@ h4 {
 
 #map
 {
-    width: 100px;
+    width: 100%;
     height: 480px;
     min-height: 100%;
     min-width: 100%;
