--- a/googleMapOnPredix/public/stylesheets/stl.css
+++ b/googleMapOnPredix/public/stylesheets/stl.css
@@ -60,7 +60,7 @@ h4 {
 }
 
 
-.header {
+.header_ {
   color: #ffffff;
 /*   background-image: url('/images/banner-dark.png'); */
 
@@ -71,64 +71,70 @@ h4 {
   margin-top: 10%;
 }
 
-.container {
+.container_ {
   margin-top: 10%;
   padding: 0 20px;
   min-height: 200px;
   text-align: center;
 }
 
-.footer {
+.footer_ {
   width: 100%;
   position: fixed;
   bottom: 0;
   z-index: -99;
+  text-align: center;
+  color:white;
 }
 
-.footer-logo-container {
+.footer-logo-container_ {
   position: relative;
 }
 
-.footer-logo {
+.footer-logo_ {
   padding: 20px;
   float: right;
 }
 
-.loader {
-    border: 16px solid #f3f3f3; /* Light grey */
-    border-top: 16px solid #3498db; /* Blue */
-    border-radius: 50%;
-    width: 120px;
-    height: 60px;
-    animation: spin 2s linear infinite;
-    margin-top: 200px;
+.footer_2 {
+  width: 100%;
+  
+  bottom: 0;
+  z-index: -99;
 }
 
-@keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
-}
 
+#map
+{
+    width: 100px;
+    height: 480px;
+    min-height: 100%;
+    min-width: 100%;
+    display: block;
+}
 
 
 .fill
 {
     min-height: 100%;
     height: 100%;
-    width: 90%;
-    min-width: 90%;
+    width: 100%;
+    min-width: 100%;
 }
 
 .container_2 {
     margin-top: 50px;
+  
+}
 
+.container_3 {
+    margin-top: 0px;
 }
 
 .nopadding {
   padding: 0;
   margin: 0;
 }
-
 
 
 .myhidden{
