--- a/googleMapOnPredix/public/stylesheets/stl.css
+++ b/googleMapOnPredix/public/stylesheets/stl.css
@@ -1,10 +1,10 @@
 body {
-	padding: 0;
-	font: 14px Roboto,'Helvetica Neue',Helvetica,Arial,sans-serif;
-	margin: 0;
-	height: 100vh;
-	display: flex;
-	flex-direction: column;
+  padding: 0;
+  font: 14px Roboto,'Helvetica Neue',Helvetica,Arial,sans-serif;
+  margin: 0;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 .index-body { 
@@ -16,8 +16,8 @@ body {
 }
 
 h1 {
-	display: block;
-	font-weight: 600;
+  display: block;
+  font-weight: 600;
     font-size: 42px;
     margin-bottom: 18px;
     text-shadow: 0 0 50px rgba(0,0,0,.4);
@@ -25,21 +25,27 @@ h1 {
 }
 
 h4 {
+  text-align: center;
+}
+
+h3 {
+	padding: 0;
+	margin: 0;
 	text-align: center;
 }
 
 .login_btn{
-	background-color: transparent;
-	border-radius: 3px;
-	border-color: white;
-	border-image-width: 1px;
-	min-width: 120px;
-	text-align: center;
-	height: 40px;
+  background-color: transparent;
+  border-radius: 3px;
+  border-color: white;
+  border-image-width: 1px;
+  min-width: 120px;
+  text-align: center;
+  height: 40px;
     line-height: 40px;
     color: white;
 
-	box-sizing: border-box;
+  box-sizing: border-box;
     display: inline-block;
     padding: 0 20px;
     vertical-align: top;
@@ -83,8 +89,8 @@ h4 {
   position: fixed;
   bottom: 0;
   z-index: -99;
-	text-align: center;
-	color:white;
+  text-align: center;
+  color:white;
 }
 
 .footer-logo-container_ {
@@ -96,6 +102,12 @@ h4 {
   float: right;
 }
 
+.footer-logo_Monash {
+  padding: 20px;
+  float: left;
+
+}
+
 .footer_2 {
   width: 100%;
   
@@ -103,20 +115,6 @@ h4 {
   z-index: -99;
 }
 
-.loader {
-    border: 16px solid #f3f3f3; /* Light grey */
-    border-top: 16px solid #3498db; /* Blue */
-    border-radius: 50%;
-    width: 120px;
-    height: 60px;
-    animation: spin 2s linear infinite;
-    margin-top: 200px;
-}
-
-@keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
-}
 
 #map
 {
@@ -137,17 +135,56 @@ h4 {
 }
 
 .container_2 {
-  	margin-top: 50px;
-	
+    margin-top: 50px;
+  
 }
 
 .container_3 {
-  	margin-top: 0px;
+    margin-top: 0px;
 }
 
 .nopadding {
-	padding: 0;
-	margin: 0;
+  padding: 0;
+  margin: 0;
 }
 
 
+.myhidden{
+   visibility: hidden;
+   height:0;
+}
+
+
+
+#map
+{
+    width: 100%;
+    height: 480px;
+    min-height: 100%;
+    min-width: 100%;
+    display: inline-block;
+}
+
+
+.loader {
+    border: 16px solid #f3f3f3; /* Light grey */
+    border-top: 16px solid #3498db; /* Blue */
+    border-radius: 50%;
+    width: 120px;
+    height: 60px;
+    animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+
+.mybackgroundHeader{
+  background-image: url('../images/bgHeader.png');
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  margin-top: 50px;
+  height: 400px;
+  width: 100%
+}
