--- a/googleMapOnPredix/public/stylesheets/lineChart.css
+++ b/googleMapOnPredix/public/stylesheets/lineChart.css
@@ -29,6 +29,17 @@
 
 #lineChartContainer {
 	width:100%;
-	height:240px;
-	display: block;
+	height:100%;
+}
+
+.title_lineChart {
+  text-align: center;
+}
+
+.grid .tick {
+    stroke: lightgrey;
+    opacity: 0.7;
+}
+.grid path {
+      stroke-width: 0;
 }
