--- a/googleMapOnPredix/public/stylesheets/stl.css
+++ b/googleMapOnPredix/public/stylesheets/stl.css
@@ -24,6 +24,13 @@ h1 {
     text-align: center;
 }
 
+h3 {
+  padding: 0;
+  margin: 0;
+  text-align: center;
+}
+  
+
 h4 {
   text-align: center;
 }
@@ -175,4 +182,10 @@ h4 {
   margin-top: 50px;
   height: 400px;
   width: 100%
+}
+
+.footer-logo_Monash {
+  padding: 20px;
+  float: left;
+
 }
