--- a/googleMapOnPredix/public/stylesheets/stl.css
+++ b/googleMapOnPredix/public/stylesheets/stl.css
@@ -24,14 +24,15 @@ h1 {
     text-align: center;
 }
 
-h4 {
+h3 {
+  padding: 0;
+  margin: 0;
   text-align: center;
 }
+  
 
-h3 {
-	padding: 0;
-	margin: 0;
-	text-align: center;
+h4 {
+  text-align: center;
 }
 
 .login_btn{
@@ -100,12 +101,6 @@ h3 {
 .footer-logo_ {
   padding: 20px;
   float: right;
-}
-
-.footer-logo_Monash {
-  padding: 20px;
-  float: left;
-
 }
 
 .footer_2 {
@@ -187,4 +182,11 @@ h3 {
   margin-top: 50px;
   height: 400px;
   width: 100%
+}
+
+.footer-logo_c {
+  padding: 20px;
+  float: center;
+
+	height:90px;
 }
